--- a/毕设前端/css/replydowndiv.css
+++ b/毕设前端/css/replydowndiv.css
@@ -1,3 +1,16 @@
+#replyZheZhao {
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    filter: alpha(opacity=50);
+    -moz-opacity: 0.5;
+    opacity: 0;
+    position: fixed;
+    top: 0px;
+    z-index: 101;
+    display: none;
+}
+
 .deletePictureDiv {
     height: 0px;
     width: 1px;
@@ -30,8 +43,9 @@
     position: fixed;
     width: 50%;
     left: 25%;
-    bottom: 0px;
+    bottom: -21%;
     background-color: white;
+    z-index: 102;
 }
 
 .goodsEvaluateReplyDownDiv-first {
