--- a/毕设前端/css/goodsManage.css
+++ b/毕设前端/css/goodsManage.css
@@ -17,3 +17,15 @@
     min-height: 100%;
     width: auto;
 }
+
+#addGoodsColorButton {
+    margin-left: 15px;
+    position: relative;
+    top: 5px;
+    font-size: 22px;
+    cursor: pointer;
+}
+
+.selection {
+    opacity: 0;
+}
